fix dark mode color for separaters

--- a/ui/desktop/src/styles/main.css
+++ b/ui/desktop/src/styles/main.css
@@ -124,9 +124,9 @@
   --background-info: var(--color-blue-100);
   --background-warning: var(--color-yellow-100);
 
-  --border-default: var(--color-neutral-900);
-  --border-input: var(--color-neutral-800);
-  --border-strong: var(--color-neutral-700);
+  --border-default: var(--color-neutral-800);
+  --border-input: var(--color-neutral-700);
+  --border-strong: var(--color-neutral-600);
   --border-danger: var(--color-red-100);
   --border-success: var(--color-green-100);
   --border-warning: var(--color-yellow-100);
